# adk-mcp-lab

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py
src/00_intro/: agent_fundamentals.md  google_adk.md
src/01_basic_agent/: README.md  agent.py
src/adk_mcp_lab/: __init__.py
test_dir/: pyproject.toml
test_dir/src/test_dir/: __init__.py
