[project]
name = "adk-mcp-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Franco", email = "daniel.franco.inbox@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "google-adk>=1.27.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
adk-mcp-lab = "adk_mcp_lab:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
