[project]
name = "adk-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Daniel Franco", email = "daniel.franco.inbox@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.0.0a1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
prerelease = "allow"
